syntax="proto3";


package pb;

import "rpc_handshake.proto";

option go_package = "ms_gmail/pb";

message Message {
    bytes AuthenId = 1;
    bytes MessageKey = 2;
    bytes SerializeData = 3;
}

service EncryptedService {
    rpc Send(Message) returns (Message) {}
    rpc Handshake (HandshakeRequest) returns (HandshakeResponse) {};
}

